--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".AddProductActivity" />
         <activity android:name=".ListCategoryActivity" />
         <activity android:name=".DetailCategoryActivity" />
-        <activity android:name=".AddCategoryActivity"></activity>
+        <activity android:name=".AddCategoryActivity" />
+        <activity android:name=".ListPermissionActivity"></activity>
     </application>
 
 </manifest>
